Revert "Merge branch 'master' into feat/webapp/prototype"
This reverts commit 1f2300c0bbc841e7cd69f4b2a1c649d98adfd710, reversing
changes made to f6320cba0afc103e447c8b144289d888cc824b39.
